--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 
 </head>
 <body>
-    <section>
+    <section class="top-banner">
     <div class="half-width">
     <h1>Welcome to</h1>
     <h1> <span class="nameHighlinght">Peter Parker </span>Website</h1>
     <h3>Build Climber and Train Stopper</h3>
     <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+    <a class="a-button" target="_blank" href="https://www.timesofesports.com/">HIRE ME</a>
     </div>
     <div class="half-width">
         <img src="./images/jhankar.png" alt="image">
