--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <section class="top-banner">
     <div class="half-width">
     <h1>Welcome to</h1>
-    <h1> <span class="nameHighlinght">Peter Parker </span>Website</h1>
-    <h3>Build Climber and Train Stopper</h3>
+    <h1> <span class="orange-highlinght">Peter Parker </span>NOW!</h1>
+    <h2>Build Climber and Train Stopper</h2>
     <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
     <a class="a-button" target="_blank" href="https://www.timesofesports.com/">HIRE ME</a>
     </div>
@@ -27,5 +27,32 @@
         <img src="./images/jhankar.png" alt="image">
     </div>
     </section>
+    <section class="middle-banner">
+        <div class="half-width">
+            <img src="./images/jhankar2.png" alt="image">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="a-button" target="_blank" href="https://www.timesofesports.com/">Download CV</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2 class="Experiences">Experiences</h2>
+        <div id="full-stack" class="half-width single-experiences">
+            <h1>Full Stack Web Developer</h1>
+            <h3 class="orange-highlinght2">2021-Present | Pro Level Developer</h3>
+            <p class="p-alingment">I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-web" class="half-width single-experiences">
+            <h1>Baby Web Developer</h1>
+            <h3 class="orange-highlinght2">2020-2021 | Programming Hero Learner</h3>
+            <p class="p-alingment">They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+    <footer>
+        © Peter Parker 2021, a Programming Hero initiative.
+    </footer>
 </body>
 </html>
